# opsin-cpp

./: CMakeLists.txt  main.cpp
automation-cpp/: CMakeLists.txt
automation-cpp/automaton/: Automaton.cpp  Automaton.h  AutomatonMatcher.cpp  AutomatonMatcher.h  AutomatonProvider.cpp  AutomatonProvider.h  BasicAutomata.cpp  BasicAutomata.h  BasicOperations.cpp  BasicOperations.h  Datatypes.cpp  Datatypes.h  DatatypesAutomatonProvider.cpp  DatatypesAutomatonProvider.h  MinimizationOperations.cpp  MinimizationOperations.h  RegExp.cpp  RegExp.h  RunAutomaton.cpp  RunAutomaton.h  ShuffleOperations.cpp  ShuffleOperations.h  SpecialOperations.cpp  SpecialOperations.h  State.cpp  State.h  StatePair.cpp  StatePair.h  StringUnionOperations.cpp  StringUnionOperations.h  Transition.cpp  Transition.h  TransitionComparator.cpp  TransitionComparator.h
opsin-core/main/: CMakeLists.txt
opsin-core/main/opsin-core/: AmbiguityChecker.cpp  AmbiguityChecker.h  AnnotatorState.cpp  Atom.cpp  Atom.h  AtomParity.cpp  AtomParity.h  Attribute.cpp  AutomatonInitialiser.cpp  Bond.cpp  Bond.h  BondStereo.cpp  BuildResults.cpp  BuildResults.h  BuildState.cpp  BuildState.h  CASTools.cpp  CASTools.h  ChemEl.h  CipOrderingException.cpp  CipSequenceRules.cpp  CipSequenceRules.h  ComponentGenerationException.h  ComponentGenerator.cpp  ComponentGenerator.h  ComponentProcessor.cpp  ComponentProcessor.h  CycleDetector.cpp  CycleDetector.h  CyclicAtomList.h  Element.h  Fragment.cpp  Fragment.h  FragmentManager.cpp  FragmentManager.h  FragmentTools.cpp  FragmentTools.h  FunctionalReplacement.cpp  FunctionalReplacement.h  FusedRingBuilder.cpp  (+70 more)
opsin-core/main/resources/: log4j.properties
opsin-core/src/main/: AmbiguityChecker.cpp  AmbiguityChecker.h  AnnotatorState.h  Atom.cpp  AtomProperties.cpp  AtomProperties.h  Attribute.h  AutomatonInitialiser.h  Bond.cpp  BondStereo.h  BuildResults.h  BuildState.cpp  BuildState.h  CASTools.cpp  CMLWriter.cpp  CMLWriter.h  ChemEl.cpp  CipOrderingException.h  ComponentGenerationException.cpp  ComponentGenerator.h  ComponentProcessor.cpp  CycleDetector.cpp  CyclicAtomList.cpp  Element.cpp  Fragment.cpp  Fragment.h  FunctionalAtom.cpp  FunctionalAtom.h  FusedRingBuilder.h  FusedRingNumberer.cpp  FusedRingNumberer.h  GroupingEl.h  IDManager.h  IndentingXMLStreamWriter.cpp  IsotopeSpecificationParser.cpp  NameToStructure.cpp  NameToStructureConfig.cpp  NameToStructureConfig.h  OpsinRadixTrie.h  OpsinResult.cpp  (+49 more)
opsin-core/src/main/java/uk/ac/cam/ch/wwmm/opsin/: AmbiguityChecker.cpp  AmbiguityChecker.h  AnnotatorState.cpp  AnnotatorState.h  Atom.cpp  Atom.h  AtomParity.cpp  AtomParity.h  AtomProperties.cpp  AtomProperties.h  Attribute.cpp  Attribute.h  AutomatonInitialiser.cpp  AutomatonInitialiser.h  Bond.cpp  Bond.h  BondStereo.cpp  BondStereo.h  BuildResults.cpp  BuildResults.h  BuildState.cpp  BuildState.h  CASTools.cpp  CASTools.h  CMLWriter.cpp  CMLWriter.h  ChemEl.cpp  ChemEl.h  (+132 more)
opsin-core/src/test/: AmbiguityDetectionTest.h  AtomTest.h  BondTest.cpp  BondTest.h  CASToolsTest.h  ComponentGeneration_AmbiguitiesAndIrregularitiesTest.h  ComponentGeneration_MiscTest.cpp  ComponentGeneration_MiscTest.h  ComponentGeneration_ProcesslocantsTest.cpp  ComponentGeneration_ProcesslocantsTest.h  ComponentGeneration_StereochemistryTest.h  ComponentProcessorTest.cpp  ComponentProcessorTest.h  CycleDetectorTest.cpp  FragmentManagerTest.h  FragmentTest.cpp  FusedRingNumbererFunctionsTest.cpp  FusedRingNumbererFunctionsTest.h  FusedRingNumbererTest.cpp  FusedRingNumbererTest.h  HeteroAtomReplacementTest.cpp  NameToStructureConfigurationsTest.cpp  NameToStructureTest.cpp  NameToStructureTest.h  ParserTest.h  PolymerTest.h  PreProcessorTest.cpp  PreProcessorTest.h  SMILESFragmentBuilderTest.cpp  SMILESFragmentBuilderTest.h  SMILESWriterTest.cpp  SSSRTest.cpp  SSSRTest.h  StructureBuildingMethodsTest.cpp  TokenizerTest.cpp  TokenizerTest.h  VerifyFragmentsTest.cpp  WordToolsTest.h
opsin-core/src/test/resources/: ambiguous.txt
opsin-core/test/: CMakeLists.txt
opsin-core/test/resources/: unambiguous.txt
opsin-core/test/src/: AmbiguityDetectionTest.cpp  AtomTest.cpp  AtomTest.h  BondTest.cpp  CASToolsTest.cpp  ComponentGeneration_AmbiguitiesAndIrregularitiesTest.cpp  ComponentGeneration_AmbiguitiesAndIrregularitiesTest.h  ComponentGeneration_MiscTest.cpp  ComponentGeneration_MiscTest.h  ComponentGeneration_ProcesslocantsTest.cpp  ComponentGeneration_ProcesslocantsTest.h  ComponentGeneration_StereochemistryTest.cpp  ComponentGeneration_StereochemistryTest.h  ComponentProcessorTest.cpp  ComponentProcessorTest.h  CycleDetectorTest.cpp  CycleDetectorTest.h  DtdTest.cpp  DtdTest.h  FragmentManagerTest.cpp  FragmentTest.cpp  FragmentTest.h  FusedRingNumbererFunctionsTest.cpp  FusedRingNumbererTest.cpp  FusedRingNumbererTest.h  HeteroAtomReplacementTest.cpp  HeteroAtomReplacementTest.h  NameToStructureConfigurationsTest.cpp  NameToStructureConfigurationsTest.h  NameToStructureTest.cpp  ParserTest.cpp  PolymerTest.cpp  PreProcessorTest.cpp  RadixTrieTest.cpp  RadixTrieTest.h  SMILESFragmentBuilderTest.cpp  SMILESFragmentBuilderTest.h  SMILESWriterTest.cpp  SMILESWriterTest.h  SSSRTest.cpp  (+8 more)
opsin-inchi/main/: CMakeLists.txt
opsin-inchi/main/opsin-inchi/: InchiPruner.cpp  NameToInchi.cpp
opsin-inchi/src/main/: InchiPruner.cpp  InchiPruner.h  NameToInchi.cpp  NameToInchi.h
opsin-inchi/src/test/: InchiOutputTest.cpp  InchiOutputTest.h
opsin-inchi/src/test/resources/: additiveNomenclature.txt  carbohydrates.txt  conjunctiveNomenclature.txt  epoxyLike.txt  functionalReplacement.txt  inorganics.txt  isotopes.txt  multiplicativeNomenclature.txt  omittedSpaces.txt
opsin-inchi/test/: CMakeLists.txt
opsin-inchi/test/resources/: acetals.txt  alcoholEsters.txt  functionalClasses.txt  fusedRings.txt  implicitBracketting.txt  ions.txt  organometallics.txt  radicals.txt
opsin-inchi/test/src/: InchiOutputTest.cpp  NomenclatureIntegrationTest.cpp  NomenclatureIntegrationTest.h
utils/: CMakeLists.txt  RectangularVectors.h  stringhelper.h
utils/base_c/: CMakeLists.txt
utils/base_cpp/: CMakeLists.txt
(+68 files in other folders)
