cmake_minimum_required(VERSION 3.8)
include("HunterGate.cmake")
HunterGate(URL "https://github.com/ruslo/hunter/archive/v0.16.15.tar.gz" SHA1 "6974c2150fc0d3b09de3ad1efcbf15d360647ffa")

project(opsin_cpp)
set(CMAKE_CXX_STANDARD 11)

hunter_add_package(Boost)
find_package(Boost 1.60 REQUIRED)
include_directories(${Boost_INCLUDE_DIR})

include_directories("utils")

set(SOURCE_FILES
        opsin-core/src/main/java/uk/ac/cam/ch/wwmm/opsin/AmbiguityChecker.cpp
        opsin-core/src/main/java/uk/ac/cam/ch/wwmm/opsin/AmbiguityChecker.h
        opsin-core/src/main/java/uk/ac/cam/ch/wwmm/opsin/AnnotatorState.cpp
        opsin-core/src/main/java/uk/ac/cam/ch/wwmm/opsin/AnnotatorState.h
        opsin-core/src/main/java/uk/ac/cam/ch/wwmm/opsin/Atom.cpp
        opsin-core/src/main/java/uk/ac/cam/ch/wwmm/opsin/Atom.h
        opsin-core/src/main/java/uk/ac/cam/ch/wwmm/opsin/AtomParity.cpp
        opsin-core/src/main/java/uk/ac/cam/ch/wwmm/opsin/AtomParity.h
        opsin-core/src/main/java/uk/ac/cam/ch/wwmm/opsin/AtomProperties.cpp
        opsin-core/src/main/java/uk/ac/cam/ch/wwmm/opsin/AtomProperties.h
        opsin-core/src/main/java/uk/ac/cam/ch/wwmm/opsin/Attribute.cpp
        opsin-core/src/main/java/uk/ac/cam/ch/wwmm/opsin/Attribute.h
        opsin-core/src/main/java/uk/ac/cam/ch/wwmm/opsin/AutomatonInitialiser.cpp
        opsin-core/src/main/java/uk/ac/cam/ch/wwmm/opsin/AutomatonInitialiser.h
        opsin-core/src/main/java/uk/ac/cam/ch/wwmm/opsin/Bond.cpp
        opsin-core/src/main/java/uk/ac/cam/ch/wwmm/opsin/Bond.h
        opsin-core/src/main/java/uk/ac/cam/ch/wwmm/opsin/BondStereo.cpp
        opsin-core/src/main/java/uk/ac/cam/ch/wwmm/opsin/BondStereo.h
        opsin-core/src/main/java/uk/ac/cam/ch/wwmm/opsin/BuildResults.cpp
        opsin-core/src/main/java/uk/ac/cam/ch/wwmm/opsin/BuildResults.h
        opsin-core/src/main/java/uk/ac/cam/ch/wwmm/opsin/BuildState.cpp
        opsin-core/src/main/java/uk/ac/cam/ch/wwmm/opsin/BuildState.h
        opsin-core/src/main/java/uk/ac/cam/ch/wwmm/opsin/CASTools.cpp
        opsin-core/src/main/java/uk/ac/cam/ch/wwmm/opsin/CASTools.h
        opsin-core/src/main/java/uk/ac/cam/ch/wwmm/opsin/ChemEl.cpp
        opsin-core/src/main/java/uk/ac/cam/ch/wwmm/opsin/ChemEl.h
        opsin-core/src/main/java/uk/ac/cam/ch/wwmm/opsin/CipOrderingException.cpp
        opsin-core/src/main/java/uk/ac/cam/ch/wwmm/opsin/CipOrderingException.h
        opsin-core/src/main/java/uk/ac/cam/ch/wwmm/opsin/CipSequenceRules.cpp
        opsin-core/src/main/java/uk/ac/cam/ch/wwmm/opsin/CipSequenceRules.h
        opsin-core/src/main/java/uk/ac/cam/ch/wwmm/opsin/CMLWriter.cpp
        opsin-core/src/main/java/uk/ac/cam/ch/wwmm/opsin/CMLWriter.h
        opsin-core/src/main/java/uk/ac/cam/ch/wwmm/opsin/ComponentGenerationException.cpp
        opsin-core/src/main/java/uk/ac/cam/ch/wwmm/opsin/ComponentGenerationException.h
        opsin-core/src/main/java/uk/ac/cam/ch/wwmm/opsin/ComponentGenerator.cpp
        opsin-core/src/main/java/uk/ac/cam/ch/wwmm/opsin/ComponentGenerator.h
        opsin-core/src/main/java/uk/ac/cam/ch/wwmm/opsin/ComponentProcessor.cpp
        opsin-core/src/main/java/uk/ac/cam/ch/wwmm/opsin/ComponentProcessor.h
        opsin-core/src/main/java/uk/ac/cam/ch/wwmm/opsin/CycleDetector.cpp
        opsin-core/src/main/java/uk/ac/cam/ch/wwmm/opsin/CycleDetector.h
        opsin-core/src/main/java/uk/ac/cam/ch/wwmm/opsin/CyclicAtomList.cpp
        opsin-core/src/main/java/uk/ac/cam/ch/wwmm/opsin/CyclicAtomList.h
        opsin-core/src/main/java/uk/ac/cam/ch/wwmm/opsin/Element.cpp
        opsin-core/src/main/java/uk/ac/cam/ch/wwmm/opsin/Element.h
        opsin-core/src/main/java/uk/ac/cam/ch/wwmm/opsin/Fragment.cpp
        opsin-core/src/main/java/uk/ac/cam/ch/wwmm/opsin/Fragment.h
        opsin-core/src/main/java/uk/ac/cam/ch/wwmm/opsin/FragmentManager.cpp
        opsin-core/src/main/java/uk/ac/cam/ch/wwmm/opsin/FragmentManager.h
        opsin-core/src/main/java/uk/ac/cam/ch/wwmm/opsin/FragmentTools.cpp
        opsin-core/src/main/java/uk/ac/cam/ch/wwmm/opsin/FragmentTools.h
        opsin-core/src/main/java/uk/ac/cam/ch/wwmm/opsin/FunctionalAtom.cpp
        opsin-core/src/main/java/uk/ac/cam/ch/wwmm/opsin/FunctionalAtom.h
        opsin-core/src/main/java/uk/ac/cam/ch/wwmm/opsin/FunctionalReplacement.cpp
        opsin-core/src/main/java/uk/ac/cam/ch/wwmm/opsin/FunctionalReplacement.h
        opsin-core/src/main/java/uk/ac/cam/ch/wwmm/opsin/FusedRingBuilder.cpp
        opsin-core/src/main/java/uk/ac/cam/ch/wwmm/opsin/FusedRingBuilder.h
        opsin-core/src/main/java/uk/ac/cam/ch/wwmm/opsin/FusedRingNumberer.cpp
        opsin-core/src/main/java/uk/ac/cam/ch/wwmm/opsin/FusedRingNumberer.h
        opsin-core/src/main/java/uk/ac/cam/ch/wwmm/opsin/GroupingEl.cpp
        opsin-core/src/main/java/uk/ac/cam/ch/wwmm/opsin/GroupingEl.h
        opsin-core/src/main/java/uk/ac/cam/ch/wwmm/opsin/IDManager.cpp
        opsin-core/src/main/java/uk/ac/cam/ch/wwmm/opsin/IDManager.h
        opsin-core/src/main/java/uk/ac/cam/ch/wwmm/opsin/IndentingXMLStreamWriter.cpp
        opsin-core/src/main/java/uk/ac/cam/ch/wwmm/opsin/IndentingXMLStreamWriter.h
        opsin-core/src/main/java/uk/ac/cam/ch/wwmm/opsin/IsotopeSpecificationParser.cpp
        opsin-core/src/main/java/uk/ac/cam/ch/wwmm/opsin/IsotopeSpecificationParser.h
        opsin-core/src/main/java/uk/ac/cam/ch/wwmm/opsin/NameToStructure.cpp
        opsin-core/src/main/java/uk/ac/cam/ch/wwmm/opsin/NameToStructure.h
        opsin-core/src/main/java/uk/ac/cam/ch/wwmm/opsin/NameToStructureConfig.cpp
        opsin-core/src/main/java/uk/ac/cam/ch/wwmm/opsin/NameToStructureConfig.h
        opsin-core/src/main/java/uk/ac/cam/ch/wwmm/opsin/NameToStructureException.cpp
        opsin-core/src/main/java/uk/ac/cam/ch/wwmm/opsin/NameToStructureException.h
        opsin-core/src/main/java/uk/ac/cam/ch/wwmm/opsin/OpsinRadixTrie.cpp
        opsin-core/src/main/java/uk/ac/cam/ch/wwmm/opsin/OpsinRadixTrie.h
        opsin-core/src/main/java/uk/ac/cam/ch/wwmm/opsin/OpsinResult.cpp
        opsin-core/src/main/java/uk/ac/cam/ch/wwmm/opsin/OpsinResult.h
        opsin-core/src/main/java/uk/ac/cam/ch/wwmm/opsin/OpsinTools.cpp
        opsin-core/src/main/java/uk/ac/cam/ch/wwmm/opsin/OpsinTools.h
        opsin-core/src/main/java/uk/ac/cam/ch/wwmm/opsin/OpsinWarning.cpp
        opsin-core/src/main/java/uk/ac/cam/ch/wwmm/opsin/OpsinWarning.h
        opsin-core/src/main/java/uk/ac/cam/ch/wwmm/opsin/OutAtom.cpp
        opsin-core/src/main/java/uk/ac/cam/ch/wwmm/opsin/OutAtom.h
        opsin-core/src/main/java/uk/ac/cam/ch/wwmm/opsin/Parse.cpp
        opsin-core/src/main/java/uk/ac/cam/ch/wwmm/opsin/Parse.h
        opsin-core/src/main/java/uk/ac/cam/ch/wwmm/opsin/Parser.cpp
        opsin-core/src/main/java/uk/ac/cam/ch/wwmm/opsin/Parser.h
        opsin-core/src/main/java/uk/ac/cam/ch/wwmm/opsin/ParseRules.cpp
        opsin-core/src/main/java/uk/ac/cam/ch/wwmm/opsin/ParseRules.h
        opsin-core/src/main/java/uk/ac/cam/ch/wwmm/opsin/ParseRulesResults.cpp
        opsin-core/src/main/java/uk/ac/cam/ch/wwmm/opsin/ParseRulesResults.h
        opsin-core/src/main/java/uk/ac/cam/ch/wwmm/opsin/ParseTokens.cpp
        opsin-core/src/main/java/uk/ac/cam/ch/wwmm/opsin/ParseTokens.h
        opsin-core/src/main/java/uk/ac/cam/ch/wwmm/opsin/ParseWord.cpp
        opsin-core/src/main/java/uk/ac/cam/ch/wwmm/opsin/ParseWord.h
        opsin-core/src/main/java/uk/ac/cam/ch/wwmm/opsin/ParsingException.cpp
        opsin-core/src/main/java/uk/ac/cam/ch/wwmm/opsin/ParsingException.h
        opsin-core/src/main/java/uk/ac/cam/ch/wwmm/opsin/PreProcessingException.cpp
        opsin-core/src/main/java/uk/ac/cam/ch/wwmm/opsin/PreProcessingException.h
        opsin-core/src/main/java/uk/ac/cam/ch/wwmm/opsin/PreProcessor.cpp
        opsin-core/src/main/java/uk/ac/cam/ch/wwmm/opsin/PreProcessor.h
        opsin-core/src/main/java/uk/ac/cam/ch/wwmm/opsin/PropertyKey.cpp
        opsin-core/src/main/java/uk/ac/cam/ch/wwmm/opsin/PropertyKey.h
        opsin-core/src/main/java/uk/ac/cam/ch/wwmm/opsin/ResourceGetter.cpp
        opsin-core/src/main/java/uk/ac/cam/ch/wwmm/opsin/ResourceGetter.h
        opsin-core/src/main/java/uk/ac/cam/ch/wwmm/opsin/ResourceManager.cpp
        opsin-core/src/main/java/uk/ac/cam/ch/wwmm/opsin/ResourceManager.h
        opsin-core/src/main/java/uk/ac/cam/ch/wwmm/opsin/ReverseParseRules.cpp
        opsin-core/src/main/java/uk/ac/cam/ch/wwmm/opsin/ReverseParseRules.h
        opsin-core/src/main/java/uk/ac/cam/ch/wwmm/opsin/Ring.cpp
        opsin-core/src/main/java/uk/ac/cam/ch/wwmm/opsin/Ring.h
        opsin-core/src/main/java/uk/ac/cam/ch/wwmm/opsin/SMILESFragmentBuilder.cpp
        opsin-core/src/main/java/uk/ac/cam/ch/wwmm/opsin/SMILESFragmentBuilder.h
        opsin-core/src/main/java/uk/ac/cam/ch/wwmm/opsin/SMILESWriter.cpp
        opsin-core/src/main/java/uk/ac/cam/ch/wwmm/opsin/SMILESWriter.h
        opsin-core/src/main/java/uk/ac/cam/ch/wwmm/opsin/SortParses.cpp
        opsin-core/src/main/java/uk/ac/cam/ch/wwmm/opsin/SortParses.h
        opsin-core/src/main/java/uk/ac/cam/ch/wwmm/opsin/SSSRFinder.cpp
        opsin-core/src/main/java/uk/ac/cam/ch/wwmm/opsin/SSSRFinder.h
        opsin-core/src/main/java/uk/ac/cam/ch/wwmm/opsin/StereoAnalyser.cpp
        opsin-core/src/main/java/uk/ac/cam/ch/wwmm/opsin/StereoAnalyser.h
        opsin-core/src/main/java/uk/ac/cam/ch/wwmm/opsin/StereochemistryException.cpp
        opsin-core/src/main/java/uk/ac/cam/ch/wwmm/opsin/StereochemistryException.h
        opsin-core/src/main/java/uk/ac/cam/ch/wwmm/opsin/StereochemistryHandler.cpp
        opsin-core/src/main/java/uk/ac/cam/ch/wwmm/opsin/StereochemistryHandler.h
        opsin-core/src/main/java/uk/ac/cam/ch/wwmm/opsin/StringTools.cpp
        opsin-core/src/main/java/uk/ac/cam/ch/wwmm/opsin/StringTools.h
        opsin-core/src/main/java/uk/ac/cam/ch/wwmm/opsin/StructureBuilder.cpp
        opsin-core/src/main/java/uk/ac/cam/ch/wwmm/opsin/StructureBuilder.h
        opsin-core/src/main/java/uk/ac/cam/ch/wwmm/opsin/StructureBuildingException.cpp
        opsin-core/src/main/java/uk/ac/cam/ch/wwmm/opsin/StructureBuildingException.h
        opsin-core/src/main/java/uk/ac/cam/ch/wwmm/opsin/StructureBuildingMethods.cpp
        opsin-core/src/main/java/uk/ac/cam/ch/wwmm/opsin/StructureBuildingMethods.h
        opsin-core/src/main/java/uk/ac/cam/ch/wwmm/opsin/SuffixApplier.cpp
        opsin-core/src/main/java/uk/ac/cam/ch/wwmm/opsin/SuffixApplier.h
        opsin-core/src/main/java/uk/ac/cam/ch/wwmm/opsin/SuffixRule.cpp
        opsin-core/src/main/java/uk/ac/cam/ch/wwmm/opsin/SuffixRule.h
        opsin-core/src/main/java/uk/ac/cam/ch/wwmm/opsin/SuffixRules.cpp
        opsin-core/src/main/java/uk/ac/cam/ch/wwmm/opsin/SuffixRules.h
        opsin-core/src/main/java/uk/ac/cam/ch/wwmm/opsin/SuffixRuleType.cpp
        opsin-core/src/main/java/uk/ac/cam/ch/wwmm/opsin/SuffixRuleType.h
        opsin-core/src/main/java/uk/ac/cam/ch/wwmm/opsin/TokenEl.cpp
        opsin-core/src/main/java/uk/ac/cam/ch/wwmm/opsin/TokenEl.h
        opsin-core/src/main/java/uk/ac/cam/ch/wwmm/opsin/Tokeniser.cpp
        opsin-core/src/main/java/uk/ac/cam/ch/wwmm/opsin/Tokeniser.h
        opsin-core/src/main/java/uk/ac/cam/ch/wwmm/opsin/TokenizationResult.cpp
        opsin-core/src/main/java/uk/ac/cam/ch/wwmm/opsin/TokenizationResult.h
        opsin-core/src/main/java/uk/ac/cam/ch/wwmm/opsin/ValencyChecker.cpp
        opsin-core/src/main/java/uk/ac/cam/ch/wwmm/opsin/ValencyChecker.h
        opsin-core/src/main/java/uk/ac/cam/ch/wwmm/opsin/WordRule.cpp
        opsin-core/src/main/java/uk/ac/cam/ch/wwmm/opsin/WordRule.h
        opsin-core/src/main/java/uk/ac/cam/ch/wwmm/opsin/WordRules.cpp
        opsin-core/src/main/java/uk/ac/cam/ch/wwmm/opsin/WordRules.h
        opsin-core/src/main/java/uk/ac/cam/ch/wwmm/opsin/WordRulesOmittedSpaceCorrector.cpp
        opsin-core/src/main/java/uk/ac/cam/ch/wwmm/opsin/WordRulesOmittedSpaceCorrector.h
        opsin-core/src/main/java/uk/ac/cam/ch/wwmm/opsin/WordTools.cpp
        opsin-core/src/main/java/uk/ac/cam/ch/wwmm/opsin/WordTools.h
        opsin-core/src/main/java/uk/ac/cam/ch/wwmm/opsin/WordType.cpp
        opsin-core/src/main/java/uk/ac/cam/ch/wwmm/opsin/WordType.h
        opsin-core/src/main/java/uk/ac/cam/ch/wwmm/opsin/XmlDeclarations.cpp
        opsin-core/src/main/java/uk/ac/cam/ch/wwmm/opsin/XmlDeclarations.h
        opsin-core/src/test/java/uk/ac/cam/ch/wwmm/opsin/AmbiguityDetectionTest.cpp
        opsin-core/src/test/java/uk/ac/cam/ch/wwmm/opsin/AmbiguityDetectionTest.h
        opsin-core/src/test/java/uk/ac/cam/ch/wwmm/opsin/AtomTest.cpp
        opsin-core/src/test/java/uk/ac/cam/ch/wwmm/opsin/AtomTest.h
        opsin-core/src/test/java/uk/ac/cam/ch/wwmm/opsin/BondTest.cpp
        opsin-core/src/test/java/uk/ac/cam/ch/wwmm/opsin/BondTest.h
        opsin-core/src/test/java/uk/ac/cam/ch/wwmm/opsin/CASToolsTest.cpp
        opsin-core/src/test/java/uk/ac/cam/ch/wwmm/opsin/CASToolsTest.h
        opsin-core/src/test/java/uk/ac/cam/ch/wwmm/opsin/ComponentGeneration_AmbiguitiesAndIrregularitiesTest.cpp
        opsin-core/src/test/java/uk/ac/cam/ch/wwmm/opsin/ComponentGeneration_AmbiguitiesAndIrregularitiesTest.h
        opsin-core/src/test/java/uk/ac/cam/ch/wwmm/opsin/ComponentGeneration_MiscTest.cpp
        opsin-core/src/test/java/uk/ac/cam/ch/wwmm/opsin/ComponentGeneration_MiscTest.h
        opsin-core/src/test/java/uk/ac/cam/ch/wwmm/opsin/ComponentGeneration_ProcesslocantsTest.cpp
        opsin-core/src/test/java/uk/ac/cam/ch/wwmm/opsin/ComponentGeneration_ProcesslocantsTest.h
        opsin-core/src/test/java/uk/ac/cam/ch/wwmm/opsin/ComponentGeneration_StereochemistryTest.cpp
        opsin-core/src/test/java/uk/ac/cam/ch/wwmm/opsin/ComponentGeneration_StereochemistryTest.h
        opsin-core/src/test/java/uk/ac/cam/ch/wwmm/opsin/ComponentProcessorTest.cpp
        opsin-core/src/test/java/uk/ac/cam/ch/wwmm/opsin/ComponentProcessorTest.h
        opsin-core/src/test/java/uk/ac/cam/ch/wwmm/opsin/CycleDetectorTest.cpp
        opsin-core/src/test/java/uk/ac/cam/ch/wwmm/opsin/CycleDetectorTest.h
        opsin-core/src/test/java/uk/ac/cam/ch/wwmm/opsin/DtdTest.cpp
        opsin-core/src/test/java/uk/ac/cam/ch/wwmm/opsin/DtdTest.h
        opsin-core/src/test/java/uk/ac/cam/ch/wwmm/opsin/FragmentManagerTest.cpp
        opsin-core/src/test/java/uk/ac/cam/ch/wwmm/opsin/FragmentManagerTest.h
        opsin-core/src/test/java/uk/ac/cam/ch/wwmm/opsin/FragmentTest.cpp
        opsin-core/src/test/java/uk/ac/cam/ch/wwmm/opsin/FragmentTest.h
        opsin-core/src/test/java/uk/ac/cam/ch/wwmm/opsin/FusedRingNumbererFunctionsTest.cpp
        opsin-core/src/test/java/uk/ac/cam/ch/wwmm/opsin/FusedRingNumbererFunctionsTest.h
        opsin-core/src/test/java/uk/ac/cam/ch/wwmm/opsin/FusedRingNumbererTest.cpp
        opsin-core/src/test/java/uk/ac/cam/ch/wwmm/opsin/FusedRingNumbererTest.h
        opsin-core/src/test/java/uk/ac/cam/ch/wwmm/opsin/HeteroAtomReplacementTest.cpp
        opsin-core/src/test/java/uk/ac/cam/ch/wwmm/opsin/HeteroAtomReplacementTest.h
        opsin-core/src/test/java/uk/ac/cam/ch/wwmm/opsin/NameToStructureConfigurationsTest.cpp
        opsin-core/src/test/java/uk/ac/cam/ch/wwmm/opsin/NameToStructureConfigurationsTest.h
        opsin-core/src/test/java/uk/ac/cam/ch/wwmm/opsin/NameToStructureTest.cpp
        opsin-core/src/test/java/uk/ac/cam/ch/wwmm/opsin/NameToStructureTest.h
        opsin-core/src/test/java/uk/ac/cam/ch/wwmm/opsin/ParserTest.cpp
        opsin-core/src/test/java/uk/ac/cam/ch/wwmm/opsin/ParserTest.h
        opsin-core/src/test/java/uk/ac/cam/ch/wwmm/opsin/PolymerTest.cpp
        opsin-core/src/test/java/uk/ac/cam/ch/wwmm/opsin/PolymerTest.h
        opsin-core/src/test/java/uk/ac/cam/ch/wwmm/opsin/PreProcessorTest.cpp
        opsin-core/src/test/java/uk/ac/cam/ch/wwmm/opsin/PreProcessorTest.h
        opsin-core/src/test/java/uk/ac/cam/ch/wwmm/opsin/RadixTrieTest.cpp
        opsin-core/src/test/java/uk/ac/cam/ch/wwmm/opsin/RadixTrieTest.h
        opsin-core/src/test/java/uk/ac/cam/ch/wwmm/opsin/SMILESFragmentBuilderTest.cpp
        opsin-core/src/test/java/uk/ac/cam/ch/wwmm/opsin/SMILESFragmentBuilderTest.h
        opsin-core/src/test/java/uk/ac/cam/ch/wwmm/opsin/SMILESWriterTest.cpp
        opsin-core/src/test/java/uk/ac/cam/ch/wwmm/opsin/SMILESWriterTest.h
        opsin-core/src/test/java/uk/ac/cam/ch/wwmm/opsin/SSSRTest.cpp
        opsin-core/src/test/java/uk/ac/cam/ch/wwmm/opsin/SSSRTest.h
        opsin-core/src/test/java/uk/ac/cam/ch/wwmm/opsin/StereochemistryTest.cpp
        opsin-core/src/test/java/uk/ac/cam/ch/wwmm/opsin/StereochemistryTest.h
        opsin-core/src/test/java/uk/ac/cam/ch/wwmm/opsin/StructureBuildingMethodsTest.cpp
        opsin-core/src/test/java/uk/ac/cam/ch/wwmm/opsin/StructureBuildingMethodsTest.h
        opsin-core/src/test/java/uk/ac/cam/ch/wwmm/opsin/TokenizerTest.cpp
        opsin-core/src/test/java/uk/ac/cam/ch/wwmm/opsin/TokenizerTest.h
        opsin-core/src/test/java/uk/ac/cam/ch/wwmm/opsin/VerifyFragmentsTest.cpp
        opsin-core/src/test/java/uk/ac/cam/ch/wwmm/opsin/VerifyFragmentsTest.h
        opsin-core/src/test/java/uk/ac/cam/ch/wwmm/opsin/WordToolsTest.cpp
        opsin-core/src/test/java/uk/ac/cam/ch/wwmm/opsin/WordToolsTest.h
        opsin-inchi/src/main/java/uk/ac/cam/ch/wwmm/opsin/InchiPruner.cpp
        opsin-inchi/src/main/java/uk/ac/cam/ch/wwmm/opsin/InchiPruner.h
        opsin-inchi/src/main/java/uk/ac/cam/ch/wwmm/opsin/NameToInchi.cpp
        opsin-inchi/src/main/java/uk/ac/cam/ch/wwmm/opsin/NameToInchi.h
        opsin-inchi/src/test/java/uk/ac/cam/ch/wwmm/opsin/InchiOutputTest.cpp
        opsin-inchi/src/test/java/uk/ac/cam/ch/wwmm/opsin/InchiOutputTest.h
        opsin-inchi/src/test/java/uk/ac/cam/ch/wwmm/opsin/NomenclatureIntegrationTest.cpp
        opsin-inchi/src/test/java/uk/ac/cam/ch/wwmm/opsin/NomenclatureIntegrationTest.h
        utils/RectangularVectors.h
        utils/stringbuilder.h
        utils/stringhelper.h)

add_executable(opsin_cpp ${SOURCE_FILES})
target_link_libraries(opsin_cpp LINK_PUBLIC ${Boost_LIBRARIES})