cmake_minimum_required(VERSION 3.8)
include("HunterGate.cmake")
HunterGate(URL "https://github.com/ruslo/hunter/archive/v0.16.15.tar.gz" SHA1 "6974c2150fc0d3b09de3ad1efcbf15d360647ffa")

project(opsin_cpp)
set(CMAKE_CXX_STANDARD 11)

hunter_add_package(Boost)
find_package(Boost 1.60 REQUIRED)
include_directories(${Boost_INCLUDE_DIR})

include_directories("utils")

set(SOURCE_FILES
        opsin-core/src/main/AmbiguityChecker.cpp
        opsin-core/src/main/AmbiguityChecker.h
        opsin-core/src/main/AnnotatorState.cpp
        opsin-core/src/main/AnnotatorState.h
        opsin-core/src/main/Atom.cpp
        opsin-core/src/main/Atom.h
        opsin-core/src/main/AtomParity.cpp
        opsin-core/src/main/AtomParity.h
        opsin-core/src/main/AtomProperties.cpp
        opsin-core/src/main/AtomProperties.h
        opsin-core/src/main/Attribute.cpp
        opsin-core/src/main/Attribute.h
        opsin-core/src/main/AutomatonInitialiser.cpp
        opsin-core/src/main/AutomatonInitialiser.h
        opsin-core/src/main/Bond.cpp
        opsin-core/src/main/Bond.h
        opsin-core/src/main/BondStereo.cpp
        opsin-core/src/main/BondStereo.h
        opsin-core/src/main/BuildResults.cpp
        opsin-core/src/main/BuildResults.h
        opsin-core/src/main/BuildState.cpp
        opsin-core/src/main/BuildState.h
        opsin-core/src/main/CASTools.cpp
        opsin-core/src/main/CASTools.h
        opsin-core/src/main/ChemEl.cpp
        opsin-core/src/main/ChemEl.h
        opsin-core/src/main/CipOrderingException.cpp
        opsin-core/src/main/CipOrderingException.h
        opsin-core/src/main/CipSequenceRules.cpp
        opsin-core/src/main/CipSequenceRules.h
        opsin-core/src/main/CMLWriter.cpp
        opsin-core/src/main/CMLWriter.h
        opsin-core/src/main/ComponentGenerationException.cpp
        opsin-core/src/main/ComponentGenerationException.h
        opsin-core/src/main/ComponentGenerator.cpp
        opsin-core/src/main/ComponentGenerator.h
        opsin-core/src/main/ComponentProcessor.cpp
        opsin-core/src/main/ComponentProcessor.h
        opsin-core/src/main/CycleDetector.cpp
        opsin-core/src/main/CycleDetector.h
        opsin-core/src/main/CyclicAtomList.cpp
        opsin-core/src/main/CyclicAtomList.h
        opsin-core/src/main/Element.cpp
        opsin-core/src/main/Element.h
        opsin-core/src/main/Fragment.cpp
        opsin-core/src/main/Fragment.h
        opsin-core/src/main/FragmentManager.cpp
        opsin-core/src/main/FragmentManager.h
        opsin-core/src/main/FragmentTools.cpp
        opsin-core/src/main/FragmentTools.h
        opsin-core/src/main/FunctionalAtom.cpp
        opsin-core/src/main/FunctionalAtom.h
        opsin-core/src/main/FunctionalReplacement.cpp
        opsin-core/src/main/FunctionalReplacement.h
        opsin-core/src/main/FusedRingBuilder.cpp
        opsin-core/src/main/FusedRingBuilder.h
        opsin-core/src/main/FusedRingNumberer.cpp
        opsin-core/src/main/FusedRingNumberer.h
        opsin-core/src/main/GroupingEl.cpp
        opsin-core/src/main/GroupingEl.h
        opsin-core/src/main/IDManager.cpp
        opsin-core/src/main/IDManager.h
        opsin-core/src/main/IndentingXMLStreamWriter.cpp
        opsin-core/src/main/IndentingXMLStreamWriter.h
        opsin-core/src/main/IsotopeSpecificationParser.cpp
        opsin-core/src/main/IsotopeSpecificationParser.h
        opsin-core/src/main/NameToStructure.cpp
        opsin-core/src/main/NameToStructure.h
        opsin-core/src/main/NameToStructureConfig.cpp
        opsin-core/src/main/NameToStructureConfig.h
        opsin-core/src/main/NameToStructureException.cpp
        opsin-core/src/main/NameToStructureException.h
        opsin-core/src/main/OpsinRadixTrie.cpp
        opsin-core/src/main/OpsinRadixTrie.h
        opsin-core/src/main/OpsinResult.cpp
        opsin-core/src/main/OpsinResult.h
        opsin-core/src/main/OpsinTools.cpp
        opsin-core/src/main/OpsinTools.h
        opsin-core/src/main/OpsinWarning.cpp
        opsin-core/src/main/OpsinWarning.h
        opsin-core/src/main/OutAtom.cpp
        opsin-core/src/main/OutAtom.h
        opsin-core/src/main/Parse.cpp
        opsin-core/src/main/Parse.h
        opsin-core/src/main/Parser.cpp
        opsin-core/src/main/Parser.h
        opsin-core/src/main/ParseRules.cpp
        opsin-core/src/main/ParseRules.h
        opsin-core/src/main/ParseRulesResults.cpp
        opsin-core/src/main/ParseRulesResults.h
        opsin-core/src/main/ParseTokens.cpp
        opsin-core/src/main/ParseTokens.h
        opsin-core/src/main/ParseWord.cpp
        opsin-core/src/main/ParseWord.h
        opsin-core/src/main/ParsingException.cpp
        opsin-core/src/main/ParsingException.h
        opsin-core/src/main/PreProcessingException.cpp
        opsin-core/src/main/PreProcessingException.h
        opsin-core/src/main/PreProcessor.cpp
        opsin-core/src/main/PreProcessor.h
        opsin-core/src/main/PropertyKey.cpp
        opsin-core/src/main/PropertyKey.h
        opsin-core/src/main/ResourceGetter.cpp
        opsin-core/src/main/ResourceGetter.h
        opsin-core/src/main/ResourceManager.cpp
        opsin-core/src/main/ResourceManager.h
        opsin-core/src/main/ReverseParseRules.cpp
        opsin-core/src/main/ReverseParseRules.h
        opsin-core/src/main/Ring.cpp
        opsin-core/src/main/Ring.h
        opsin-core/src/main/SMILESFragmentBuilder.cpp
        opsin-core/src/main/SMILESFragmentBuilder.h
        opsin-core/src/main/SMILESWriter.cpp
        opsin-core/src/main/SMILESWriter.h
        opsin-core/src/main/SortParses.cpp
        opsin-core/src/main/SortParses.h
        opsin-core/src/main/SSSRFinder.cpp
        opsin-core/src/main/SSSRFinder.h
        opsin-core/src/main/StereoAnalyser.cpp
        opsin-core/src/main/StereoAnalyser.h
        opsin-core/src/main/StereochemistryException.cpp
        opsin-core/src/main/StereochemistryException.h
        opsin-core/src/main/StereochemistryHandler.cpp
        opsin-core/src/main/StereochemistryHandler.h
        opsin-core/src/main/StringTools.cpp
        opsin-core/src/main/StringTools.h
        opsin-core/src/main/StructureBuilder.cpp
        opsin-core/src/main/StructureBuilder.h
        opsin-core/src/main/StructureBuildingException.cpp
        opsin-core/src/main/StructureBuildingException.h
        opsin-core/src/main/StructureBuildingMethods.cpp
        opsin-core/src/main/StructureBuildingMethods.h
        opsin-core/src/main/SuffixApplier.cpp
        opsin-core/src/main/SuffixApplier.h
        opsin-core/src/main/SuffixRule.cpp
        opsin-core/src/main/SuffixRule.h
        opsin-core/src/main/SuffixRules.cpp
        opsin-core/src/main/SuffixRules.h
        opsin-core/src/main/SuffixRuleType.cpp
        opsin-core/src/main/SuffixRuleType.h
        opsin-core/src/main/TokenEl.cpp
        opsin-core/src/main/TokenEl.h
        opsin-core/src/main/Tokeniser.cpp
        opsin-core/src/main/Tokeniser.h
        opsin-core/src/main/TokenizationResult.cpp
        opsin-core/src/main/TokenizationResult.h
        opsin-core/src/main/ValencyChecker.cpp
        opsin-core/src/main/ValencyChecker.h
        opsin-core/src/main/WordRule.cpp
        opsin-core/src/main/WordRule.h
        opsin-core/src/main/WordRules.cpp
        opsin-core/src/main/WordRules.h
        opsin-core/src/main/WordRulesOmittedSpaceCorrector.cpp
        opsin-core/src/main/WordRulesOmittedSpaceCorrector.h
        opsin-core/src/main/WordTools.cpp
        opsin-core/src/main/WordTools.h
        opsin-core/src/main/WordType.cpp
        opsin-core/src/main/WordType.h
        opsin-core/src/main/XmlDeclarations.cpp
        opsin-core/src/main/XmlDeclarations.h

        opsin-core/src/test/AmbiguityDetectionTest.cpp
        opsin-core/src/test/AmbiguityDetectionTest.h
        opsin-core/src/test/AtomTest.cpp
        opsin-core/src/test/AtomTest.h
        opsin-core/src/test/BondTest.cpp
        opsin-core/src/test/BondTest.h
        opsin-core/src/test/CASToolsTest.cpp
        opsin-core/src/test/CASToolsTest.h
        opsin-core/src/test/ComponentGeneration_AmbiguitiesAndIrregularitiesTest.cpp
        opsin-core/src/test/ComponentGeneration_AmbiguitiesAndIrregularitiesTest.h
        opsin-core/src/test/ComponentGeneration_MiscTest.cpp
        opsin-core/src/test/ComponentGeneration_MiscTest.h
        opsin-core/src/test/ComponentGeneration_ProcesslocantsTest.cpp
        opsin-core/src/test/ComponentGeneration_ProcesslocantsTest.h
        opsin-core/src/test/ComponentGeneration_StereochemistryTest.cpp
        opsin-core/src/test/ComponentGeneration_StereochemistryTest.h
        opsin-core/src/test/ComponentProcessorTest.cpp
        opsin-core/src/test/ComponentProcessorTest.h
        opsin-core/src/test/CycleDetectorTest.cpp
        opsin-core/src/test/CycleDetectorTest.h
        opsin-core/src/test/DtdTest.cpp
        opsin-core/src/test/DtdTest.h
        opsin-core/src/test/FragmentManagerTest.cpp
        opsin-core/src/test/FragmentManagerTest.h
        opsin-core/src/test/FragmentTest.cpp
        opsin-core/src/test/FragmentTest.h
        opsin-core/src/test/FusedRingNumbererFunctionsTest.cpp
        opsin-core/src/test/FusedRingNumbererFunctionsTest.h
        opsin-core/src/test/FusedRingNumbererTest.cpp
        opsin-core/src/test/FusedRingNumbererTest.h
        opsin-core/src/test/HeteroAtomReplacementTest.cpp
        opsin-core/src/test/HeteroAtomReplacementTest.h
        opsin-core/src/test/NameToStructureConfigurationsTest.cpp
        opsin-core/src/test/NameToStructureConfigurationsTest.h
        opsin-core/src/test/NameToStructureTest.cpp
        opsin-core/src/test/NameToStructureTest.h
        opsin-core/src/test/ParserTest.cpp
        opsin-core/src/test/ParserTest.h
        opsin-core/src/test/PolymerTest.cpp
        opsin-core/src/test/PolymerTest.h
        opsin-core/src/test/PreProcessorTest.cpp
        opsin-core/src/test/PreProcessorTest.h
        opsin-core/src/test/RadixTrieTest.cpp
        opsin-core/src/test/RadixTrieTest.h
        opsin-core/src/test/SMILESFragmentBuilderTest.cpp
        opsin-core/src/test/SMILESFragmentBuilderTest.h
        opsin-core/src/test/SMILESWriterTest.cpp
        opsin-core/src/test/SMILESWriterTest.h
        opsin-core/src/test/SSSRTest.cpp
        opsin-core/src/test/SSSRTest.h
        opsin-core/src/test/StereochemistryTest.cpp
        opsin-core/src/test/StereochemistryTest.h
        opsin-core/src/test/StructureBuildingMethodsTest.cpp
        opsin-core/src/test/StructureBuildingMethodsTest.h
        opsin-core/src/test/TokenizerTest.cpp
        opsin-core/src/test/TokenizerTest.h
        opsin-core/src/test/VerifyFragmentsTest.cpp
        opsin-core/src/test/VerifyFragmentsTest.h
        opsin-core/src/test/WordToolsTest.cpp
        opsin-core/src/test//WordToolsTest.h

        opsin-inchi/src/main/InchiPruner.cpp
        opsin-inchi/src/main/InchiPruner.h
        opsin-inchi/src/main/NameToInchi.cpp
        opsin-inchi/src/main/NameToInchi.h
        opsin-inchi/src/test/InchiOutputTest.cpp
        opsin-inchi/src/test/InchiOutputTest.h
        opsin-inchi/src/test/NomenclatureIntegrationTest.cpp
        opsin-inchi/src/test/NomenclatureIntegrationTest.h
        
        utils/RectangularVectors.h
        utils/stringbuilder.h
        utils/stringhelper.h)

add_executable(opsin_cpp ${SOURCE_FILES})
target_link_libraries(opsin_cpp LINK_PUBLIC ${Boost_LIBRARIES})