add_library(opsin-core
        opsin-core/AmbiguityChecker.cpp
        opsin-core/AmbiguityChecker.h
        opsin-core/AnnotatorState.cpp
        opsin-core/AnnotatorState.h
        opsin-core/Atom.cpp
        opsin-core/Atom.h
        opsin-core/AtomParity.cpp
        opsin-core/AtomParity.h
        opsin-core/AtomProperties.cpp
        opsin-core/AtomProperties.h
        opsin-core/Attribute.cpp
        opsin-core/Attribute.h
        opsin-core/AutomatonInitialiser.cpp
        opsin-core/AutomatonInitialiser.h
        opsin-core/Bond.cpp
        opsin-core/Bond.h
        opsin-core/BondStereo.cpp
        opsin-core/BondStereo.h
        opsin-core/BuildResults.cpp
        opsin-core/BuildResults.h
        opsin-core/BuildState.cpp
        opsin-core/BuildState.h
        opsin-core/CASTools.cpp
        opsin-core/CASTools.h
        opsin-core/ChemEl.cpp
        opsin-core/ChemEl.h
        opsin-core/CipOrderingException.cpp
        opsin-core/CipOrderingException.h
        opsin-core/CipSequenceRules.cpp
        opsin-core/CipSequenceRules.h
        opsin-core/CMLWriter.cpp
        opsin-core/CMLWriter.h
        opsin-core/ComponentGenerationException.cpp
        opsin-core/ComponentGenerationException.h
        opsin-core/ComponentGenerator.cpp
        opsin-core/ComponentGenerator.h
        opsin-core/ComponentProcessor.cpp
        opsin-core/ComponentProcessor.h
        opsin-core/CycleDetector.cpp
        opsin-core/CycleDetector.h
        opsin-core/CyclicAtomList.cpp
        opsin-core/CyclicAtomList.h
        opsin-core/Element.cpp
        opsin-core/Element.h
        opsin-core/Fragment.cpp
        opsin-core/Fragment.h
        opsin-core/FragmentManager.cpp
        opsin-core/FragmentManager.h
        opsin-core/FragmentTools.cpp
        opsin-core/FragmentTools.h
        opsin-core/FunctionalAtom.cpp
        opsin-core/FunctionalAtom.h
        opsin-core/FunctionalReplacement.cpp
        opsin-core/FunctionalReplacement.h
        opsin-core/FusedRingBuilder.cpp
        opsin-core/FusedRingBuilder.h
        opsin-core/FusedRingNumberer.cpp
        opsin-core/FusedRingNumberer.h
        opsin-core/GroupingEl.cpp
        opsin-core/GroupingEl.h
        opsin-core/IDManager.cpp
        opsin-core/IDManager.h
        opsin-core/IndentingXMLStreamWriter.cpp
        opsin-core/IndentingXMLStreamWriter.h
        opsin-core/IsotopeSpecificationParser.cpp
        opsin-core/IsotopeSpecificationParser.h
        opsin-core/NameToStructure.cpp
        opsin-core/NameToStructure.h
        opsin-core/NameToStructureConfig.cpp
        opsin-core/NameToStructureConfig.h
        opsin-core/NameToStructureException.cpp
        opsin-core/NameToStructureException.h
        opsin-core/OpsinRadixTrie.cpp
        opsin-core/OpsinRadixTrie.h
        opsin-core/OpsinResult.cpp
        opsin-core/OpsinResult.h
        opsin-core/OpsinTools.cpp
        opsin-core/OpsinTools.h
        opsin-core/OpsinWarning.cpp
        opsin-core/OpsinWarning.h
        opsin-core/OutAtom.cpp
        opsin-core/OutAtom.h
        opsin-core/Parse.cpp
        opsin-core/Parse.h
        opsin-core/Parser.cpp
        opsin-core/Parser.h
        opsin-core/ParseRules.cpp
        opsin-core/ParseRules.h
        opsin-core/ParseRulesResults.cpp
        opsin-core/ParseRulesResults.h
        opsin-core/ParseTokens.cpp
        opsin-core/ParseTokens.h
        opsin-core/ParseWord.cpp
        opsin-core/ParseWord.h
        opsin-core/ParsingException.cpp
        opsin-core/ParsingException.h
        opsin-core/PreProcessingException.cpp
        opsin-core/PreProcessingException.h
        opsin-core/PreProcessor.cpp
        opsin-core/PreProcessor.h
        opsin-core/PropertyKey.cpp
        opsin-core/PropertyKey.h
        opsin-core/ResourceGetter.cpp
        opsin-core/ResourceGetter.h
        opsin-core/ResourceManager.cpp
        opsin-core/ResourceManager.h
        opsin-core/ReverseParseRules.cpp
        opsin-core/ReverseParseRules.h
        opsin-core/Ring.cpp
        opsin-core/Ring.h
        opsin-core/SMILESFragmentBuilder.cpp
        opsin-core/SMILESFragmentBuilder.h
        opsin-core/SMILESWriter.cpp
        opsin-core/SMILESWriter.h
        opsin-core/SortParses.cpp
        opsin-core/SortParses.h
        opsin-core/SSSRFinder.cpp
        opsin-core/SSSRFinder.h
        opsin-core/StereoAnalyser.cpp
        opsin-core/StereoAnalyser.h
        opsin-core/StereochemistryException.cpp
        opsin-core/StereochemistryException.h
        opsin-core/StereochemistryHandler.cpp
        opsin-core/StereochemistryHandler.h
        opsin-core/StringTools.cpp
        opsin-core/StringTools.h
        opsin-core/StructureBuilder.cpp
        opsin-core/StructureBuilder.h
        opsin-core/StructureBuildingException.cpp
        opsin-core/StructureBuildingException.h
        opsin-core/StructureBuildingMethods.cpp
        opsin-core/StructureBuildingMethods.h
        opsin-core/SuffixApplier.cpp
        opsin-core/SuffixApplier.h
        opsin-core/SuffixRule.cpp
        opsin-core/SuffixRule.h
        opsin-core/SuffixRules.cpp
        opsin-core/SuffixRules.h
        opsin-core/SuffixRuleType.cpp
        opsin-core/SuffixRuleType.h
        opsin-core/TokenEl.cpp
        opsin-core/TokenEl.h
        opsin-core/Tokeniser.cpp
        opsin-core/Tokeniser.h
        opsin-core/TokenizationResult.cpp
        opsin-core/TokenizationResult.h
        opsin-core/ValencyChecker.cpp
        opsin-core/ValencyChecker.h
        opsin-core/WordRule.cpp
        opsin-core/WordRule.h
        opsin-core/WordRules.cpp
        opsin-core/WordRules.h
        opsin-core/WordRulesOmittedSpaceCorrector.cpp
        opsin-core/WordRulesOmittedSpaceCorrector.h
        opsin-core/WordTools.cpp
        opsin-core/WordTools.h
        opsin-core/WordType.cpp
        opsin-core/WordType.h
        opsin-core/XmlDeclarations.cpp
        opsin-core/XmlDeclarations.h)

target_include_directories(opsin-core PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})

target_link_libraries(opsin-core utils automation)

set_target_properties(opsin-core PROPERTIES LINKER_LANGUAGE CXX)
