add_executable(opsin-core-test
        src/AmbiguityDetectionTest.cpp
        src/AmbiguityDetectionTest.h
        src/AtomTest.cpp
        src/AtomTest.h
        src/BondTest.cpp
        src/BondTest.h
        src/CASToolsTest.cpp
        src/CASToolsTest.h
        src/ComponentGeneration_AmbiguitiesAndIrregularitiesTest.cpp
        src/ComponentGeneration_AmbiguitiesAndIrregularitiesTest.h
        src/ComponentGeneration_MiscTest.cpp
        src/ComponentGeneration_MiscTest.h
        src/ComponentGeneration_ProcesslocantsTest.cpp
        src/ComponentGeneration_ProcesslocantsTest.h
        src/ComponentGeneration_StereochemistryTest.cpp
        src/ComponentGeneration_StereochemistryTest.h
        src/ComponentProcessorTest.cpp
        src/ComponentProcessorTest.h
        src/CycleDetectorTest.cpp
        src/CycleDetectorTest.h
        src/DtdTest.cpp
        src/DtdTest.h
        src/FragmentManagerTest.cpp
        src/FragmentManagerTest.h
        src/FragmentTest.cpp
        src/FragmentTest.h
        src/FusedRingNumbererFunctionsTest.cpp
        src/FusedRingNumbererFunctionsTest.h
        src/FusedRingNumbererTest.cpp
        src/FusedRingNumbererTest.h
        src/HeteroAtomReplacementTest.cpp
        src/HeteroAtomReplacementTest.h
        src/NameToStructureConfigurationsTest.cpp
        src/NameToStructureConfigurationsTest.h
        src/NameToStructureTest.cpp
        src/NameToStructureTest.h
        src/ParserTest.cpp
        src/ParserTest.h
        src/PolymerTest.cpp
        src/PolymerTest.h
        src/PreProcessorTest.cpp
        src/PreProcessorTest.h
        src/RadixTrieTest.cpp
        src/RadixTrieTest.h
        src/SMILESFragmentBuilderTest.cpp
        src/SMILESFragmentBuilderTest.h
        src/SMILESWriterTest.cpp
        src/SMILESWriterTest.h
        src/SSSRTest.cpp
        src/SSSRTest.h
        src/StereochemistryTest.cpp
        src/StereochemistryTest.h
        src/StructureBuildingMethodsTest.cpp
        src/StructureBuildingMethodsTest.h
        src/TokenizerTest.cpp
        src/TokenizerTest.h
        src/VerifyFragmentsTest.cpp
        src/VerifyFragmentsTest.h
        src/WordToolsTest.cpp
        src/WordToolsTest.h)

target_link_libraries(opsin-core-test opsin-core)